# guardiao-digital

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: analysis_router.py  healthcheck.py  phishing_router.py
src/core/: config.py  container.py  exceptions.py  logger.py
src/domain/entities/: analysis_results.py  message.py  url_reports.py
src/domain/interfaces/: i_classifier.py  i_repository.py  i_reputation_service.py
src/infra/classifiers/: ml_classifier.py  rule_based_classifier.py
src/infra/database/: memory_repository.py
src/infra/reputation/: google_safebrowsing.py  virustotal.py
src/infra/security/: sanitizer.py
src/services/: analyzer_service.py  phising_service.py  text_classifier_service.py  url_reputation_service.py
src/tests/: __init__.py  conftest.py  test_analyzer_service.py  test_classifiers.py  test_reputation_service.py  test_routes_phishing.py
src/tests/unit/: test_entities.py  test_text_cleaner.py  test_url_extractor.py
src/utils/: text_cleaner.py  url_extractor.py
ui/: app.py
ui/services/: __init__.py  api_client.py
ui/static/: style.css  ui.js
ui/templates/: base.html  detail.html  history.html  index.html  phishing.html  phishing_result.html  result.html
ui/templates/components/: icons.html
ui/templates/partials/: detail_fragment.html  error_fragment.html  history_list_fragment.html  result_fragment.html
